--- a/assets/common.css
+++ b/assets/common.css
@@ -190,6 +190,19 @@
   font-size: 0.8125rem;
 }
 
+.place-map {
+  display: inline-flex;
+  font-size: 0.8125rem;
+  color: #56b6c2;
+  margin-top: 0.25rem;
+  padding-right: 1rem;
+
+  background-image: url("data:image/svg+xml,%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' width='1024' height='1024' viewBox='0 0 1024 1024' fill='%2356b6c2'%3E%3Cpath d='M621.254 877.254l320-320c24.994-24.992 24.994-65.516 0-90.51l-320-320c-24.994-24.992-65.516-24.992-90.51 0-24.994 24.994-24.994 65.516 0 90.51l210.746 210.746h-613.49c-35.346 0-64 28.654-64 64s28.654 64 64 64h613.49l-210.746 210.746c-12.496 12.496-18.744 28.876-18.744 45.254s6.248 32.758 18.744 45.254c24.994 24.994 65.516 24.994 90.51 0z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-size: 0.625rem auto;
+  background-position: right 0.375rem;
+}
+
 @keyframes rotation {
   0% {
       transform: rotate(0deg);
