Update area colors for live page

--- a/assets/common.css
+++ b/assets/common.css
@@ -1,8 +1,8 @@
 :root {
   --color-area-0: #323841;
   --color-area-1: #82603a;
-  --color-area-2: #9a702f;
-  --color-area-3: #b58034;
+  --color-area-2: #a1713b;
+  --color-area-3: #c1813b;
   --color-area-4: #e0923c;
 }
 
